hphp/hack/test/typecheck/reactive/rx_indexing2.php.exp
File "rx_indexing2.php", line 6, characters 3-14:
Cannot assign to element of Hack Collection object via [] in a reactive context. Instead, use the 'set' method. (Typing[4201])
